@@ -1,3 +1,13 @@
+2017-04-01  Alexey Proskuryakov  <ap@apple.com>
+
+        Rolling back <https://trac.webkit.org/r214697>, as it made WebKit2.DataDetectionReferenceDate time out.
+
+        Was REGRESSION (r202472): Data Detection overwrites existing links in detected ranges
+        https://bugs.webkit.org/show_bug.cgi?id=170365
+
+        * editing/cocoa/DataDetection.mm:
+        (WebCore::searchForLinkRemovingExistingDDLinks):
+
 2017-04-01  Chris Dumez  <cdumez@apple.com>
 
         We should pause silent WebAudio rendering in background tabs
